crates/core/tests/proc/svc/opaque.stderr
error[E0080]: evaluation panicked: This method looks like a constructor, but does not return ffi::Result<Self, _>
  --> tests/proc/svc/opaque.rs:13:12
   |
13 |     pub fn new() -> ffi::Result<Self, Error> {
   |            ^^^ evaluation of `_` failed here

warning: unnecessary `unsafe` block
  --> tests/proc/svc/opaque.rs:13:12
   |
13 |     pub fn new() -> ffi::Result<Self, Error> {
   |            ^^^ unnecessary `unsafe` block
   |
   = note: `#[warn(unused_unsafe)]` on by default
